syntax = "proto3";

option go_package = "api/v1";

import "google/api/annotations.proto";

package v1;

message VersionRequest {}

message VersionResponse {
  string version = 1;
}

service VersionService {
  rpc GetVersion (VersionRequest) returns (VersionResponse) {
    option (google.api.http) = {
      get: "/v1/version"
    };
  }
}
